--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "chart.js": "^4.4.1",
+    "framer-motion": "^4.1.17",
+    "mongoose": "^8.1.1",
     "next": "14.1.0",
+    "plotly.js": "^2.29.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "react-hook-form": "^7.50.0"
+    "react-hook-form": "^7.50.0",
+    "react-plotly.js": "^2.6.0",
+    "react-plotlyjs": "^0.4.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
